(mostly) fix alignment

--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -12,14 +12,15 @@
   color: red;
 }
 
-.home-section{
-  margin:  1em;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+.home-section {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
   transition: 0.3s;
   border-radius: 1em;
   padding: 1em;
+  min-width: 20px;
+  margin: 1em 0;
 
-  &:hover{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
+  &:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.35);
   }
 }
